# RustaceBot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  dispatcher.rs  main.rs
src/handlers/: admin.rs  broadcast.rs  callbacks.rs  commands.rs  filters.rs  inline.rs  mod.rs  moderation.rs  notes.rs
