[package]
name = "rustace-bot"
version = "0.1.0"
edition = "2021"
authors = ["Ankit Chaubey <ankitchaubey.dev@gmail.com>"]
description = "Rustace — The official showcase bot for the tgbotrs library"
license = "MIT"
repository = "https://github.com/ankit-chaubey/RustaceBot"
homepage = "https://github.com/ankit-chaubey/RustaceBot"
keywords = ["telegram", "bot", "tgbotrs", "rust", "showcase"]

[[bin]]
name = "rustacebot"
path = "src/main.rs"

[dependencies]
tgbotrs    = { version = "0.1.4", features = ["webhook"] }
tokio      = { version = "1",     features = ["full"] }
dotenv     = "0.15"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rand       = "0.8"
anyhow     = "1"

[features]
webhook = []
